Assignment-4-main/Assignment 4.txt
university> db.StudentsAssignment.insertMany([{name: "John", age: 20, grade: "B"},{name: "Emily", age: 19, grade: "C"}, {name: "Michael", age: 30, grade: "A"}, {name:"Sarah", age: 25, grade: "A"}, {name: "Roy", age: 17, grade: "D"}])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6729d7a43b0f304b7a0d8193'),
    '1': ObjectId('6729d7a43b0f304b7a0d8194'),
    '2': ObjectId('6729d7a43b0f304b7a0d8195'),
    '3': ObjectId('6729d7a43b0f304b7a0d8196'),
    '4': ObjectId('6729d7a43b0f304b7a0d8197')
  }
}
university> db.StudentsAssignment.find({})
[
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8193'),
    name: 'John',
    age: 20,
    grade: 'B'
  },
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8194'),
    name: 'Emily',
    age: 19,
    grade: 'C'
  },
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8195'),
    name: 'Michael',
    age: 30,
    grade: 'A'
  },
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8196'),
    name: 'Sarah',
    age: 25,
    grade: 'A'
  },
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8197'),
    name: 'Roy',
    age: 17,
    grade: 'D'
  }
]
university> db.StudentsAssignment.find({ age: > 18})
Uncaught:
SyntaxError: Unexpected token (1:34)

> 1 | db.StudentsAssignment.find({ age: > 18})
    |                                   ^
  2 |

university> db.StudentsAssignment.find({ age: { $gt : 18 } })
[
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8193'),
    name: 'John',
    age: 20,
    grade: 'B'
  },
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8194'),
    name: 'Emily',
    age: 19,
    grade: 'C'
  },
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8195'),
    name: 'Michael',
    age: 30,
    grade: 'A'
  },
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8196'),
    name: 'Sarah',
    age: 25,
    grade: 'A'
  }
]

university> db.StudentsAssignment.find({ age: { $gt: 18, $lt: 23}})
[
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8193'),
    name: 'John',
    age: 20,
    grade: 'A'
  }
]   
                                                                     
university> db.StudentsAssignment.updateOne({name: "John"}, { $set : { grade: "A"}}
)
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}

university> db.StudentsAssignment.deleteOne({name: "Emily" })
{ acknowledged: true, deletedCount: 1 }

university> db.StudentsAssignment.countDocuments({ grade: "B"})
0

university> db.StudentsAssignment.find({}, { name : 1, grade : 1, _id: 0})
[
  { name: 'John', grade: 'A' },
  { name: 'Michael', grade: 'A' },
  { name: 'Sarah', grade: 'A' },
  { name: 'Roy', grade: 'D' }
]

university> db.StudentsAssignment.find({}).sort({ age : -1})
[
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8195'),
    name: 'Michael',
    age: 30,
    grade: 'A'
  },
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8196'),
    name: 'Sarah',
    age: 25,
    grade: 'A'
  },
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8193'),
    name: 'John',
    age: 20,
    grade: 'A'
  },
  {
    _id: ObjectId('6729d7a43b0f304b7a0d8197'),
    name: 'Roy',
    age: 17,
    grade: 'D'
  }
]